Update Neural Network Bialetti.ipynb

--- a/Neural Network Bialetti.ipynb
+++ b/Neural Network Bialetti.ipynb
@@ -436,7 +436,7 @@
        "                                                  ['day_week', 'month',\n",
        "                                                   'Spesa Facebook', 'google',\n",
        "                                                   'Organico'])])),\n",
-       "                ('model', MLPRegressor())])</pre></div></div></div><div class=\"sk-serial\"><div class=\"sk-item sk-dashed-wrapped\"><div class=\"sk-label-container\"><div class=\"sk-label sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"d086edb1-a204-4134-a8ac-8d31d2abfd9d\" type=\"checkbox\" ><label class=\"sk-toggleable__label\" for=\"d086edb1-a204-4134-a8ac-8d31d2abfd9d\">column_transformer: ColumnTransformer</label><div class=\"sk-toggleable__content\"><pre>ColumnTransformer(transformers=[('one hot',\n",
+       "                ('model', MLPRegressor())])</pre></div></div></div><div class=\"sk-serial\"><div class=\"sk-item sk-dashed-wrapped\"><div class=\"sk-label-container\"><div class=\"sk-label sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"d086edb1-a204-4134-a8ac-8d31d2abfd9d\" type=\"checkbox\" ><label class=\"sk-toggleable__label\" for=\"d086edb1-a204-4134-a8ac-8d31d2abfd9d\">column_transformer: ColumnTransformer</label><div class=\"sk-toggleable__content\"><pre>ColumnTransformer(transformers=[('one hot',\n",verbose_feature_names_out=True)
        "                                 OneHotEncoder(handle_unknown='ignore'),\n",
        "                                 ['day_week', 'month']),\n",
        "                                ('scaler', QuantileTransformer(),\n",
